# documents-organization

./: .gitignore  README.md  projects.txt  projects_cli.py  projects_cli_declarative.py  projects_cli_shortcuts.py  projview_cli.py  pyproject.toml  shortcut contents.txt
example/: .documents_cli.yaml  projects.bat  setup.ps1
prototype/: README.md  get_projects.py
tests/: .projview_cli.yaml  case1.yaml  projects.bat  test_cli.py  test_load.yaml  test_save.yaml
